--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<span> Webapp {{title}} is running!</span>
+<span> Webapp {{title}} v2 is running!</span>
 
 <app-test></app-test>
+
+<img src="assets/images/underconstruction.jfif" />
