--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,8 @@
 <mat-toolbar id="navbar" color="primary">
   <mat-toolbar-row>
-    <span>Daniele Piscaglia</span>
+    <span id="firma">Daniele Piscaglia</span>
     <span class="example-spacer"></span>
+<!--    <mat-icon>delete</mat-icon>-->
     <mat-icon svgIcon="github"></mat-icon>
     <mat-icon svgIcon="linkedin"></mat-icon>
     <mat-icon svgIcon="fb"></mat-icon>
