--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Tamma+2&display=swap');
 
+@font-face {
+  font-family: Belove;
+  src: url(../assets/fonts/Belove.otf) format("opentype");
+}
 
