--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -3,3 +3,6 @@ $borderColor: whitesmoke;
 $lightTextColor: #DEDEE4;
 $darkText: #2c3037;
 $containerColor: #2c3037;
+$elementColor: navajowhite;
+
+$mainFont : 'Baloo Tamma 2', cursive;
