--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,7 @@
 <!--<app-test></app-test>-->
 <app-about></app-about>
 
-<img src="assets/images/underconstruction.jfif" /><br/>
+<!--<img src="assets/images/underconstruction.jfif" /><br/>-->
+
+<app-footer></app-footer>
 
