--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -25,7 +25,7 @@
     position:relative;
 
     .placeholder, .colorImg {
-      height: 60vh;
+      max-height: 60vh;
       max-width: 65vw;
     }
 
