--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,3 +1,5 @@
+<!-- TODO: https://codepen.io/snippy_valson/pen/xVJeQB Press enter to continue home-->
+
 <div class="landing-container">
   <div class="image">
 
