Added sliding div

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,13 @@
 <!--<app-test></app-test>-->
 <app-about></app-about>
 
-<!--<img src="assets/images/underconstruction.jfif" /><br/>-->
-
+<app-sliding-div style="background: #69E781">
+  <div class="listDiv">
+    <p>Outside everything that is connected with a computer, my main passion is having fun on a jet-ski.
+      This passion has been passed on to my by my father and brother! I have raced and still do so in nationals
+      and internationals championships</p>
+    <mat-icon svgIcon="medal"></mat-icon>
+  </div>
+</app-sliding-div>
 <app-footer></app-footer>
 
