Sliding div corner & fixes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,13 +5,17 @@
 <!--<app-test></app-test>-->
 <app-about></app-about>
 
-<app-sliding-div style="background: #69E781">
+<app-sliding-div backgroundColor="aquamarine" cssClasses="cornered fullWidth">
   <div class="listDiv">
-    <p>Outside everything that is connected with a computer, my main passion is having fun on a jet-ski.
-      This passion has been passed on to my by my father and brother! I have raced and still do so in nationals
+    <p class="textBox">Outside everything that is connected with a computer, my main passion is having fun on a jet-ski.
+      This passion has been passed on to me by my father and my brother! I currently in nationals
       and internationals championships</p>
     <mat-icon svgIcon="medal"></mat-icon>
   </div>
+  <ul>
+    <li><mat-icon svgIcon="winner"></mat-icon> 2017 Italian Champion Ski F2</li>
+    <li><mat-icon svgIcon="winner"></mat-icon> 2019 Italian Champion Ski F1</li>
+  </ul>
 </app-sliding-div>
 <app-footer></app-footer>
 
