Sliding div: added delay timer (to have multiple sliding divs)

--- a/src/app/sliding-div/sliding-div.component.html
+++ b/src/app/sliding-div/sliding-div.component.html
@@ -1,4 +1,4 @@
-<div [class]='"sliding-div " + cssClasses'
+<div [class]='"notYetSlided sliding-div " + cssClasses'
      [style.background]='backgroundColor'
      inViewport (inViewportAction)="isVisible($event)">
   <ng-content>
