Minor aesthetics fixes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
       and internationals championships</p>
     <mat-icon svgIcon="medal"></mat-icon>
   </div>
-  <ul>
+  <ul class="hiddenUl">
     <li><mat-icon svgIcon="winner"></mat-icon> 2017 Italian Champion Ski F2</li>
     <li><mat-icon svgIcon="winner"></mat-icon> 2019 Italian Champion Ski F1</li>
   </ul>
