--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,22 @@
 
 <app-sliding-div backgroundColor="aquamarine" cssClasses="cornered fullWidth">
   <div class="listDiv">
+    <div class="textBox">
+      <p>Since when I've started coding with my first programming language (which I don't even remember anymore)
+      I had the chance to learn many other languages, some during my career as a student and some because of personal interesting.
+      </p>
+      <ul>
+        <li>C#</li>
+        <li>Javascript</li>
+        <li>CSS</li>
+        <li>Angular</li>
+      </ul>
+    </div>
+    <mat-icon svgIcon="success"></mat-icon>
+  </div>
+</app-sliding-div>
+<app-sliding-div backgroundColor="#ffdead" cssClasses="cornered fullWidth">
+  <div class="listDiv">
     <p class="textBox">Outside everything that is connected with a computer, my main passion is having fun on a jet-ski.
       This passion has been passed on to me by my father and my brother! I currently in nationals
       and internationals championships</p>
