--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -1,7 +1,7 @@
 $backColor : #69E781;
 $borderColor: whitesmoke;
 $lightTextColor: #DEDEE4;
-$darkText: #2c3037;
+$darkTextColor: #2c3037;
 $containerColor: #2c3037;
 $elementColor: navajowhite;
 
