--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -13,7 +13,7 @@
   </app-sliding-div>
   <app-sliding-div [delay]="300">
     <div class="box">
-      <mat-icon svgIcon="thinking"></mat-icon>
+      <mat-icon svgIcon="idea"></mat-icon>
       <div class="hexagon">
         <h2>Hands on</h2>
         <p>Pragmatic approach to every problem focusing on how to solve it</p>
