--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,12 +1,46 @@
 @import "../variables.scss";
 
+mat-toolbar{
+  position: relative;
+}
+
+mat-toolbar:after{
+  content: "";
+  background-image: url("../../assets/images/drawline.svg");
+  background-size: contain;
+  background-repeat: repeat-x;
+  position: absolute;
+  bottom: -6px;
+  height: 14px;
+  width: 100vw;
+  max-width:100%;
+
+  -moz-transform: scaleY(-1);
+  -o-transform: scaleY(-1);
+  -webkit-transform: scaleY(-1);
+  transform: scaleY(-1);
+  -ms-filter: "FlipV";
+}
+
 mat-icon {
   padding: 0 14px;
 }
 
+mat-toolbar-row{
+  padding: 0;
+}
 
 mat-icon:hover{
   color: $backColor;
+}
+
+#firma{
+  font-family: Belove;
+  //font-size: 4em;
+  line-height: inherit;
+  vertical-align: middle;
+  width: 55vw;
+  max-width: 530px;
 }
 
 #navbar{
@@ -33,15 +67,6 @@ mat-icon:hover{
   }
 
 
-}
-
-#firma{
-  font-family: Belove;
-  //font-size: 4em;
-  line-height: inherit;
-  vertical-align: middle;
-  width: 40vw;
-  max-width: 530px;
 }
 
 .example-spacer {
