Added cards and infos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,13 @@
+<!-- TODO: Mobile responsive cards -->
+
 <app-landing></app-landing>
 <app-header></app-header>
-
-
 <!--<app-test></app-test>-->
 <app-about></app-about>
 
 <app-sliding-div backgroundColor="aquamarine" cssClasses="cornered fullWidth">
   <div class="listDiv">
+    <h1>My passion</h1>
     <div class="textBox">
       <p>Since when I've started coding with my first programming language (which I don't even remember anymore)
       I had the chance to learn many other languages and frameworks, some during my career as a student and some because of personal interesting.
@@ -30,6 +31,7 @@
 </app-sliding-div>
 <app-sliding-div backgroundColor="rgb(255, 115, 115)" cssClasses="cornered fullWidth">
   <div class="listDiv">
+    <h1>Academic career</h1>
     <ul id="schoolList">
       <li>2015: IT expert diploma (88/100)</li>
       <li>2018: Computer Engineer Bachelor Degree UNIBO (109/110)</li>
@@ -41,6 +43,7 @@
 </app-sliding-div>
 <app-sliding-div backgroundColor="#ffdead" cssClasses="cornered fullWidth">
   <div class="listDiv">
+    <h1>My projects</h1>
     <ul id="projectList">
       <li onClick='window.open("https://www.amazon.it/Pisca-Studio-Crazy-Cyclist/dp/B016YOIKWK")'><mat-icon svgIcon="android"></mat-icon> CrazyCyclist Mobile Game</li>
       <li onClick='window.open("http://www.piscagliacostruzioni.it")'><mat-icon svgIcon="html5"></mat-icon> Piscaglia Costruzioni Website</li>
@@ -54,9 +57,10 @@
 </app-sliding-div>
 <app-sliding-div backgroundColor="rgb(189, 255, 173)" cssClasses="cornered fullWidth">
   <div class="listDiv">
+    <h1>Sports</h1>
     <p class="textBox">Outside everything that is connected with a computer, my main passion is having fun on a jet-ski.
-      This passion has been passed on to me by my father and my brother! I currently in nationals
-      and internationals championships</p>
+      This passion has been passed on to me by my father and my brother! I currently race in nationals
+      and internationals championships.</p>
     <mat-icon svgIcon="medal"></mat-icon>
     <ul class="hiddenUl">
       <li><mat-icon svgIcon="winner"></mat-icon> 2017 Italian Champion Ski F2</li>
