Added WebGL home background

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,6 +1,8 @@
 <!-- TODO: https://codepen.io/snippy_valson/pen/xVJeQB Press enter to continue home-->
 
+
 <div class="landing-container">
+  <iframe id="backgroundWebGL" src="assets/backgroundSquares.html"></iframe>
   <div class="image">
 
     <img id="colore" class="colorImg" [style.transform]=translateL src="assets/images/color.png" />
