--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -21,4 +21,48 @@
   max-width:100%;
 }
 
+h2{
+  font-family: $mainFont;
+  font-size: 2em;
+  margin:0;
+  text-align: center;
+}
+
+
+ul{
+  font-family: $mainFont;
+  font-size: 1em;
+  list-style: none inside none;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  li {
+    list-style: none inside none;
+    text-align: center;
+  }
+}
+
+
+
+.socials {
+  color: $darkTextColor;
+  margin: auto;
+  justify-content: space-evenly;
+  align-content: center;
+  width: 40%;
+  display: flex;
+  max-width: 200px;
+
+  a{
+    color: inherit;
+    font-size: xx-large;
+    width: 52px;
+
+
+    mat-icon{
+      padding: 0;
+    }
+  }
+}
+
 
