--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,11 @@
 <app-header></app-header>
 <!--<app-test></app-test>-->
 <app-about></app-about>
-
+<div id="resumeDiv">
+  <p>Want to know more? Download my resume:</p>
+  <a href="assets/resume/DanielePiscaglia_EN.pdf">English</a>
+  <a href="assets/resume/DanielePiscaglia_IT.pdf">Italian</a>
+</div>
 <app-sliding-div backgroundColor="aquamarine" cssClasses="cornered fullWidth">
   <div class="listDiv">
     <h1>My passion</h1>
