--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,6 +6,27 @@
   src: url(../assets/fonts/Belove.otf) format("opentype");
 }
 
+#resumeDiv{
+  text-align: center;
+  font-family: 'Baloo Tamma 2', cursive;
+  font-size: 1.5em;
+  margin: 20px;
+  p{
+    margin: 0;
+  }
+  a{
+      margin: 10px;
+      padding: 2px 5px;
+      border: solid 1px black;
+      border-radius: 5px;
+      color: black;
+  }
+  a:hover{
+    border-color: crimson;
+    color: crimson;
+  }
+}
+
 /******* LIST BOXES *********/
 
 .listDiv{
