--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,7 +38,7 @@
     <h1>Academic career</h1>
     <ul id="schoolList">
       <li>2015: IT expert diploma (88/100)</li>
-      <li>2018: Computer Engineer Bachelor Degree UNIBO (109/110)</li>
+      <li>2018: Computer Engineer Bachelor Degree UNIBO (109/110) (<span class="link" onClick='window.open("assets/docs/tesi-triennale.pdf")'>Thesis</span>) </li>
       <li>Currently: Computer Engineer Master Degree UNIBO</li>
     </ul>
     <mat-icon svgIcon="certificate"></mat-icon>
@@ -49,6 +49,8 @@
   <div class="listDiv">
     <h1>My projects</h1>
     <ul id="projectList">
+      <li onClick='window.open("assets/docs/bft-fabric.pdf")'><mat-icon svgIcon="pdf"></mat-icon> BFT consensus in Hyperledger Fabric (ITA)</li>
+      <li onClick='window.open("assets/docs/confronto-consensus.pdf")'><mat-icon svgIcon="pdf"></mat-icon> Consensus mechanisms in blockchains (ITA)</li>
       <li onClick='window.open("https://www.amazon.it/Pisca-Studio-Crazy-Cyclist/dp/B016YOIKWK")'><mat-icon svgIcon="android"></mat-icon> CrazyCyclist Mobile Game</li>
       <li onClick='window.open("http://www.piscagliacostruzioni.it")'><mat-icon svgIcon="html5"></mat-icon> Piscaglia Costruzioni Website</li>
       <li onClick='window.open("https://github.com/danipisca07/Modeling4Cloud")'><mat-icon svgIcon="cloud"></mat-icon> Modeling4Cloud, monitor/benchmark for cloud services</li>
