Added employment history section CV updated

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -7,7 +7,7 @@
       <mat-icon svgIcon="graduation"></mat-icon>
       <div class="hexagon">
         <h2>Computer Engineer</h2>
-        <p>About to complete the Master's degree in Computer Engineering</p>
+        <p>Master degree with honors in Computer Engineering</p>
       </div>
     </div>
   </app-sliding-div>
