--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,7 @@
     <ul id="schoolList">
       <li>2015: IT expert diploma (88/100)</li>
       <li>2018: Computer Engineer Bachelor Degree UNIBO (109/110) (<span class="link" onClick='window.open("assets/docs/tesi-triennale.pdf")'>Thesis</span>) </li>
-      <li>Currently: Computer Engineer Master Degree UNIBO</li>
+      <li>2020: Computer Engineer Master Degree UNIBO (110 with Honors/110)</li>
     </ul>
     <mat-icon svgIcon="certificate"></mat-icon>
 
@@ -47,8 +47,21 @@
 </app-sliding-div>
 <app-sliding-div backgroundColor="#ffdead" cssClasses="cornered fullWidth">
   <div class="listDiv">
+    <h1>Employment History</h1>
+    <ul id="workList">
+      <li>2018-2018: Intership at NeXT s.r.l. (3 months)</li>
+      <li>2020-2021: Thesis internship at Bonfiglioli </li>
+      <li>Since 2021: IoT Edge developer at Bonfiglioli</li>
+    </ul>
+    <mat-icon svgIcon="briefcase"></mat-icon>
+
+  </div>
+</app-sliding-div>
+<app-sliding-div backgroundColor="rgb(189, 255, 173)" cssClasses="cornered fullWidth">
+  <div class="listDiv">
     <h1>My projects</h1>
     <ul id="projectList">
+      <li onClick='window.open("https://github.com/danipisca07/iota-supply-tracer")'><mat-icon svgIcon="iota"></mat-icon> Iota Supply Tracer</li>
       <li onClick='window.open("assets/docs/bft-fabric.pdf")'><mat-icon svgIcon="pdf"></mat-icon> BFT consensus in Hyperledger Fabric (ITA)</li>
       <li onClick='window.open("assets/docs/confronto-consensus.pdf")'><mat-icon svgIcon="pdf"></mat-icon> Consensus mechanisms in blockchains (ITA)</li>
       <li onClick='window.open("https://www.amazon.it/Pisca-Studio-Crazy-Cyclist/dp/B016YOIKWK")'><mat-icon svgIcon="android"></mat-icon> CrazyCyclist Mobile Game</li>
@@ -61,7 +74,7 @@
     <mat-icon svgIcon="tasks"></mat-icon>
   </div>
 </app-sliding-div>
-<app-sliding-div backgroundColor="rgb(189, 255, 173)" cssClasses="cornered fullWidth">
+<app-sliding-div backgroundColor="#B986FC" cssClasses="cornered fullWidth">
   <div class="listDiv">
     <h1>Sports</h1>
     <p class="textBox">Outside everything that is connected with a computer, my main passion is having fun on a jet-ski.
