--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,7 @@
     <ul id="schoolList">
       <li>2015: IT expert diploma (88/100)</li>
       <li>2018: Computer Engineer Bachelor Degree UNIBO (109/110) (<span class="link" onClick='window.open("assets/docs/tesi-triennale.pdf")'>Thesis</span>) </li>
-      <li>2020: Computer Engineer Master Degree UNIBO (110 with Honors/110)</li>
+      <li>2020: Computer Engineer Master Degree UNIBO (110/110 with honors)</li>
     </ul>
     <mat-icon svgIcon="certificate"></mat-icon>
 
@@ -50,8 +50,9 @@
     <h1>Employment History</h1>
     <ul id="workList">
       <li>2018-2018: Intership at NeXT s.r.l. (3 months)</li>
-      <li>2020-2021: Thesis internship at Bonfiglioli </li>
-      <li>Since 2021: IoT Edge developer at Bonfiglioli</li>
+      <li>2020-2021: Thesis internship at Bonfiglioli s.p.a.</li>
+      <li>2021-2022: IoT Edge developer at Bonfiglioli s.p.a.</li>
+      <li>Since 2022: Software engineer at Technogym s.p.a.</li>
     </ul>
     <mat-icon svgIcon="briefcase"></mat-icon>
 
@@ -83,7 +84,7 @@
     <mat-icon svgIcon="medal"></mat-icon>
     <ul class="hiddenUl">
       <li><mat-icon svgIcon="winner"></mat-icon> 2017 Italian Champion Ski F2</li>
-      <li><mat-icon svgIcon="winner"></mat-icon> 2019 Italian Champion Ski F1</li>
+      <li><mat-icon svgIcon="winner"></mat-icon> 2019/2020/2021/2023 Italian Champion Ski F1</li>
     </ul>
   </div>
 </app-sliding-div>
