Fix header e pulizia

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar id="navbar" color="primary">
   <mat-toolbar-row>
-    <div id="firma"><div fittext>Daniele Piscaglia</div></div>
+    <div id="firma" fittext><div>Daniele Piscaglia</div></div>
     <span class="example-spacer"></span>
 
       <!--    <mat-icon>delete</mat-icon>-->
