Update employment history

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,7 +52,8 @@
       <li>2018-2018: Intership at NeXT s.r.l. (3 months)</li>
       <li>2020-2021: Thesis internship at Bonfiglioli s.p.a.</li>
       <li>2021-2022: IoT Edge developer at Bonfiglioli s.p.a.</li>
-      <li>Since 2022: Software engineer at Technogym s.p.a.</li>
+      <li>2022-2025: Software engineer at Technogym s.p.a.</li>
+      <li>Since 2025: Freelance</li>
     </ul>
     <mat-icon svgIcon="briefcase"></mat-icon>
 
